@@ -981,8 +981,7 @@ QPDFFormFieldObjectHelper::generateTextAppearance(
                 AS.getDict().replaceKey("/Resources", resources);
             }
             // Use mergeResources to force /Font to be local
-            resources.mergeResources(
-                QPDFObjectHandle::parse("<< /Font << >> >>"));
+            resources.mergeResources("<< /Font << >> >>"_qpdf);
             resources.getKey("/Font").replaceKey(font_name, font);
         }
 
